[project]
name = "kan-pytorch"
version = "0.1.0"
description = "An efficient pure-PyTorch implementation of Kolmogorov-Arnold Network (KAN)."
authors = [
    {name = "Blealtan Cao", email = "blealtan@outlook.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
